--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
      "./exercise/b_functions",
      "./exercise/c_simple_types",
      "./exercise/d_control_flow_strings",
-     #"./exercise/e_ownership_references",
+     "./exercise/e_ownership_references",
      #"./exercise/f_structs_traits",
      #"./exercise/g_collections_enums",
      #"./exercise/h_closures_threads",
