--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
      "./exercise/d_control_flow_strings",
      "./exercise/e_ownership_references",
      "./exercise/f_structs_traits",
-     #"./exercise/g_collections_enums",
+     "./exercise/g_collections_enums",
      #"./exercise/h_closures_threads",
      #"./exercise/z_final_project"
 ]
