--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
      "./exercise/e_ownership_references",
      "./exercise/f_structs_traits",
      "./exercise/g_collections_enums",
-     #"./exercise/h_closures_threads",
+     "./exercise/h_closures_threads",
      #"./exercise/z_final_project"
 ]
 resolver = "2"
